src/test/ui/loops-reject-lifetime-shadowing-label.stderr
warning: lifetime name `'a` shadows a label name that is already in scope
  --> $DIR/loops-reject-lifetime-shadowing-label.rs:31:51
   |
30 |     'a: loop {
   |     -- first declared here
31 |         let b = Box::new(|x: &i8| *x) as Box<for <'a> Fn(&'a i8) -> i8>;
   |                                                   ^^ lifetime 'a already in scope

error: compilation successful
  --> $DIR/loops-reject-lifetime-shadowing-label.rs:39:1
   |
39 | / pub fn main() { //~ ERROR compilation successful
40 | |     foo();
41 | | }
   | |_^

